# project_harmonia

./: .gitignore  Cargo.toml  Makefile.toml  README.md  deny.toml  justfile
app/: Cargo.toml  manifest.yaml
app/assets/base/actors/animations/: male_run.gltf
app/assets/base/actors/bot/y_bot/: y_bot.gltf
app/assets/base/environment_maps/: README.md
app/assets/base/ground/spring_grass/: spring_glass.ron
app/assets/base/objects/doors/classic_door/: classic_door.info.ron  classic_door.object.ron  classic_door.ron
app/assets/base/objects/electronics/retro_tv/: retro_tv.gltf  retro_tv.info.ron  retro_tv.object.ron  retro_tv.ron
app/assets/base/objects/foliage/simple_bush/: simple_bush.gltf  simple_bush.info.ron  simple_bush.object.ron  simple_bush.ron
app/assets/base/objects/furniture/vintage_counter_1/: vintage_counter_1.gltf  vintage_counter_1.info.ron  vintage_counter_1.object.ron  vintage_counter_1.ron
app/assets/base/objects/furniture/vintage_table/: vintage_table.gltf  vintage_table.info.ron  vintage_table.object.ron  vintage_table.ron
app/assets/base/objects/outdoor_activities/beater/: beater.gltf  beater.info.ron  beater.object.ron  beater.ron
app/assets/base/objects/outdoor_activities/carousel/: carousel.gltf  carousel.info.ron  carousel.object.ron  carousel.ron
app/assets/base/objects/outdoor_activities/childrens_ladder/: childrens_ladder.gltf  childrens_ladder.info.ron  childrens_ladder.object.ron  childrens_ladder.ron
app/assets/base/objects/outdoor_activities/horizontal_bar/: horizontal_bar.gltf  horizontal_bar.info.ron  horizontal_bar.object.ron  horizontal_bar.ron
app/assets/base/objects/outdoor_activities/sandbox/: sandbox.gltf  sandbox.info.ron  sandbox.object.ron  sandbox.ron
app/assets/base/objects/outdoor_activities/slide/: slide.gltf  slide.info.ron  slide.object.ron  slide.ron
app/assets/base/objects/outdoor_activities/swing/: swing.gltf  swing.info.ron  swing.object.ron  swing.ron
app/assets/base/objects/outdoor_activities/swing_balancer/: swing_balancer.gltf  swing_balancer.info.ron  swing_balancer.object.ron  swing_balancer.ron
app/assets/base/objects/outdoor_furniture/classic_bench/: classic_bench.gltf  classic_bench.info.ron  classic_bench.object.ron  classic_bench.ron
app/assets/base/objects/outdoor_furniture/comfortable_bench/: comfortable_bench.gltf  comfortable_bench.object.ron
app/assets/base/objects/outdoor_furniture/modern_bench/: modern_bench.gltf  modern_bench.ron  (+2 more)
app/assets/base/objects/street/: crossing_road_sign.gltf
app/assets/base/roads/road_007/: road_007.road.ron  road_007.ron
app/assets/base/walls/brick/: brick.ron
app/src/: cli.rs  cursor_controller.rs  lib.rs  main.rs
base/: Cargo.toml
base/src/: action.rs  actor.rs  alpha_color.rs  animation_state.rs  asset.rs  city.rs  combined_scene_collider.rs  common_conditions.rs  component_commands.rs  core.rs  cursor_hover.rs  dynamic_mesh.rs  error_message.rs  error_report.rs  family.rs  game_paths.rs  game_state.rs  game_world.rs  ghost.rs  highlighting.rs  input_events.rs  lib.rs  lot.rs  math.rs  message.rs  navigation.rs  network.rs  object.rs  path_debug.rs  player_camera.rs  settings.rs  wall.rs
base/src/actor/: human.rs  movement_animation.rs  needs.rs  task.rs
base/src/actor/task/: buy_lot.rs  linked_task.rs  move_here.rs
base/src/actor/task/friendly/: tell_secret.rs
base/src/asset/: collection.rs  info.rs  manifest.rs  material.rs  metadata.rs
base/src/asset/info/: object_info.rs  road_info.rs
base/src/asset/manifest/: object_manifest.rs  road_manifest.rs
base/src/asset/metadata/: object_metadata.rs
base/src/developer/: path_debug.rs
base/src/family/: editor.rs
base/src/game_world/: actor.rs  building.rs  city.rs  commands_history.rs  cursor_hover.rs  family.rs  highlighting.rs  hover.rs  navigation.rs  object.rs  picking.rs  player_camera.rs  segment.rs  spline.rs
base/src/game_world/actor/: animation_state.rs  human.rs  movement_animation.rs  needs.rs  task.rs
base/src/game_world/actor/task/: buy_lot.rs  linked_task.rs  move_here.rs
base/src/game_world/building/: lot.rs  road.rs  wall.rs
base/src/game_world/building/lot/: creating_lot.rs  moving_lot.rs
base/src/game_world/building/road/: creating_road.rs  road_mesh.rs
base/src/game_world/building/wall/: creating_wall.rs  wall_mesh.rs
base/src/game_world/city/: lot.rs  road.rs
base/src/game_world/city/lot/: creating_lot.rs  moving_lot.rs
base/src/game_world/city/road/: creating_road.rs  placing_road.rs  road_mesh.rs
base/src/game_world/cursor_hover/: highlighting.rs
base/src/game_world/family/: building.rs  editor.rs
base/src/game_world/family/building/: wall.rs
base/src/game_world/hover/: highlighting.rs
base/src/game_world/navigation/: following.rs  path_debug.rs
base/src/game_world/object/: door.rs  placing_object.rs  wall_mount.rs
base/src/game_world/object/placing_object/: side_snap.rs  wall_snap.rs
base/src/game_world/segment/: moving_point.rs  placing_segment.rs  ruler.rs
base/src/game_world/spline/: dynamic_mesh.rs
base/src/lot/: creating_lot.rs  moving_lot.rs
base/src/math/: segment.rs  triangulator.rs
base/src/navigation/: following.rs  path_debug.rs
base/src/object/: door.rs  placing_object.rs  wall_mount.rs
base/src/object/placing_object/: side_snap.rs  wall_snap.rs
base/src/player_camera/: exp_smoothed.rs
base/src/wall/: creating_wall.rs
ui/: Cargo.toml
ui/src/: camera_2d.rs  connection_dialog.rs  editor_menu.rs  error_dialog.rs  fps_counter.rs  hud.rs  ingame_menu.rs  lib.rs  main_menu.rs  menu.rs  preview.rs  root.rs  settings_menu.rs  ui_root.rs  world_browser.rs  world_menu.rs
ui/src/hud/: city_hud.rs  family_hud.rs  objects_node.rs  task_menu.rs  tools_node.rs
ui/src/hud/city_hud/: lots_node.rs  roads_node.rs
ui/src/hud/family_hud/: building_hud.rs  info_node.rs  members_node.rs  portrait_node.rs  tasks_node.rs
ui/src/hud/family_hud/building_hud/: walls_node.rs
ui/src/menu/: connection_dialog.rs  editor_menu.rs  ingame_menu.rs  main_menu.rs  settings_menu.rs  world_browser.rs  world_menu.rs
(+284 files in other folders)
