[workspace]
resolver = "2"
members = ["base", "widgets", "ui", "app"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
authors = [
  "Hennadii Chernyshchyk <genaloner@gmail.com>",
  "Irina Chernyshchyk <irina.kdr@gmail.com>",
]
repository = "https://github.com/projectharmonia/project_harmonia"

[workspace.dependencies]
project_harmonia_base = { path = "base" }
project_harmonia_ui = { path = "ui" }
project_harmonia_widgets = { path = "widgets" }
bevy = { version = "0.14", default-features = false }
bevy_atmosphere = "0.10"
bevy_enhanced_input = "0.3"
bevy_replicon = "0.28.4"
bevy_replicon_renet = "0.5"
bevy_mod_outline = { version = "0.8" }
bevy_simple_text_input = "0.9"
vleue_navigator = { version = "0.10", features = ["avian3d"] }
avian3d = { version = "0.1", features = ["serialize"] }
bevy-inspector-egui = "0.25"
app_dirs2 = "2.5"
serde = "1.0"
earcut = "0.4"
strum = { version = "0.26", features = ["derive"] }
num_enum = "0.7"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
bincode = "1.3"
walkdir = "2.5"
itertools = "0.13"
bitflags = "2.6"

[workspace.lints.clippy]
type_complexity = "allow"
too_many_arguments = "allow"
doc_markdown = "warn"

[workspace.metadata.typos]
default.extend-words = { lod = "lod" }
