[package]
name = "project_harmonia"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "project_harmonia"
# We need `cdylib` for Android and `lib` for everything else.
crate-type = ["lib", "cdylib"]

[dependencies]
project_harmonia_base.workspace = true
project_harmonia_widgets.workspace = true
project_harmonia_ui.workspace = true
bevy = { workspace = true, features = [
  "bevy_gilrs",
  "file_watcher",
  "multi_threaded",
  "tonemapping_luts",
  "png",
  "x11",
  "wayland",
] }
bevy_atmosphere.workspace = true
bevy_enhanced_input.workspace = true
bevy_replicon.workspace = true
bevy_replicon_renet.workspace = true
bevy_mod_outline.workspace = true
bevy_simple_text_input.workspace = true
avian3d.workspace = true
vleue_navigator.workspace = true
bevy-inspector-egui = { workspace = true, optional = true }
app_dirs2.workspace = true
serde.workspace = true
earcut.workspace = true
strum.workspace = true
num_enum.workspace = true
clap.workspace = true
anyhow.workspace = true
bincode.workspace = true
walkdir.workspace = true
itertools.workspace = true
bitflags.workspace = true

[features]
inspector = ["dep:bevy-inspector-egui", "bevy_enhanced_input/egui_priority"]

[lints]
workspace = true
