[package]
name = "project_harmonia_base"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
bevy = { workspace = true, features = ["animation"] }
bevy_atmosphere.workspace = true
bevy_replicon.workspace = true
bevy_replicon_renet.workspace = true
bevy_xpbd_3d.workspace = true
bevy_mod_outline.workspace = true
oxidized_navigation.workspace = true
leafwing-input-manager.workspace = true
serde.workspace = true
anyhow.workspace = true
app_dirs2.workspace = true
strum.workspace = true
itertools.workspace = true
bincode.workspace = true
walkdir.workspace = true
earcut.workspace = true
num_enum.workspace = true
bitflags.workspace = true
# TODO 0.14: Remove direct dependencies on these crates
ron.workspace = true
futures-lite.workspace = true

[lints]
workspace = true
