[package]
name = "project_harmonia_base"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
bevy = { workspace = true, features = ["animation", "bevy_state", "bevy_gltf"] }
bevy_atmosphere.workspace = true
bevy_enhanced_input.workspace = true
bevy_replicon.workspace = true
bevy_replicon_renet.workspace = true
bevy_mod_outline.workspace = true
avian3d.workspace = true
vleue_navigator.workspace = true
serde.workspace = true
anyhow.workspace = true
app_dirs2.workspace = true
strum.workspace = true
itertools.workspace = true
bincode.workspace = true
walkdir.workspace = true
earcut.workspace = true
num_enum.workspace = true
bitflags.workspace = true

[lints]
workspace = true
