[package]
name = "project_harmonia_ui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
project_harmonia_base.workspace = true
project_harmonia_widgets.workspace = true
bevy.workspace = true
bevy_replicon_renet.workspace = true
bevy_replicon.workspace = true
bevy_simple_text_input.workspace = true
leafwing-input-manager.workspace = true
anyhow.workspace = true
strum.workspace = true

[lints]
workspace = true
